<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.sopt.sample.presentation.signup.SignUpViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        tools:context=".presentation.signup.SignUpActivity">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/signup"
            android:textColor="@color/grey_800"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@{vm.isValidEmail ? @drawable/shape_grey_line_6_rect : @drawable/shape_coral_line_6_rect}"
            android:hint="@string/hint_email"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            android:text="@={vm.emailText}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_email_title"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_email_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/msg_email_incorrect"
            android:textColor="@color/coral"
            android:textSize="12sp"
            android:visibility="@{vm.isValidEmail ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <TextView
            android:id="@+id/txt_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/pwd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@{vm.isValidPwd ? @drawable/shape_grey_line_6_rect : @drawable/shape_coral_line_6_rect}"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            android:text="@={vm.pwdText}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_pwd_title"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_pwd_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/msg_pwd_incorrect"
            android:textColor="@color/coral"
            android:textSize="12sp"
            android:visibility="@{vm.isValidPwd ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <TextView
            android:id="@+id/txt_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_grey_line_6_rect"
            android:hint="@string/hint_name"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            android:text="@={vm.nameText}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_name_title"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="@{vm.isValidEmail &amp;&amp; vm.emailText.length > 0 &amp;&amp; vm.isValidPwd &amp;&amp; vm.pwdText.length > 0 &amp;&amp; vm.nameText.length > 0}"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> vm.signup(vm.emailText, vm.pwdText, vm.nameText)}"
            android:paddingVertical="12dp"
            android:stateListAnimator="@null"
            android:text="@string/signup_complete"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            tools:layout_editor_absoluteX="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>