<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.sopt.sample.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        tools:context=".presentation.login.LoginActivity">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/title_login"
            android:textColor="@color/grey_800"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_grey_line_6_rect"
            android:hint="@string/hint_email"
            android:maxLength="20"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            android:singleLine="true"
            android:text="@={vm.emailText}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_email_title"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/pwd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_grey_line_6_rect"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
            android:text="@={vm.pwdText}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_pwd_title"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/grey_800"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> vm.login(vm.emailText, vm.pwdText)}"
            android:paddingVertical="10dp"
            android:text="@string/login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/grey_800"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="12dp"
            android:text="@string/signup"
            android:textStyle="bold" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="btn_login,btn_signup"
            app:flow_horizontalGap="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>